feat(header + hero): Implement reponsive header nav and hero section - Implement hamburger menu for nav links for small width devices

--- a/index.html
+++ b/index.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
     <title>Xevron</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <header class="flex-column">
+      <nav class="flex">
+        <div class="hamburger-menu">
+          <button id="hamburger-btn">
+            <img
+              src="assets/images/icons/header/hamburger.svg"
+              alt="menu"
+              id="hamburger"
+            />
+          </button>
+          <div class="offScreenMenu">
+            <div class="nav-links">
+              <a href="#">Process</a>
+              <a href="#">Benefits</a>
+              <a href="#">Services</a>
+              <a href="#">Portfolio</a>
+              <a href="#">FAQ</a>
+            </div>
+          </div>
+        </div>
+        <p class="logo">Xev<span>ron</span></p>
+        <div class="nav-right flex">
+          <div class="nav-links">
+            <a href="#">Process</a>
+            <a href="#">Benefits</a>
+            <a href="#">Services</a>
+            <a href="#">Portfolio</a>
+            <a href="#">FAQ</a>
+          </div>
+          <a href="#">
+            <button class="btn">Get Started</button>
+          </a>
+        </div>
+      </nav>
+    </header>
+    <section class="hero flex-column">
+      <p class="hero-title">
+        Bringing Your <br />
+        Dream Into <em>Reality</em>
+      </p>
+      <p class="hero-para">
+        We increase revenue and ensure sustainable long-term growth <br />
+        for your business through powerful Webflow websites.
+      </p>
+      <a href="#">
+        <button class="btn">Book A Meeting</button>
+      </a>
+      <div class="glow"></div>
+      <div class="star1 star"></div>
+      <div class="star2 star"></div>
+      <div class="star3 star"></div>
+    </section>
     <script src="assets/js/script.js"></script>
-</body>
+  </body>
 </html>
