refactor(header): Revamp hamburger menu implementation and styles for improved ux and responsiveness

--- a/index.html
+++ b/index.html
@@ -12,21 +12,13 @@
     <header class="flex-column">
       <nav class="flex">
         <div class="hamburger-menu">
-          <button id="hamburger-btn">
-            <img
-              src="assets/images/icons/header/hamburger.svg"
-              alt="menu"
-              id="hamburger"
-            />
-          </button>
-          <div class="offScreenMenu">
-            <div class="nav-links">
-              <a href="#">Process</a>
-              <a href="#">Benefits</a>
-              <a href="#">Services</a>
-              <a href="#">Portfolio</a>
-              <a href="#">FAQ</a>
-            </div>
+          <div id="hamburger-btn">
+            <b></b>
+            <b></b>
+            <b></b>
+          </div>
+          <div class="hamburger-content">
+            <!-- nav-links will be moved here on mobile -->
           </div>
         </div>
         <p class="logo">Xev<span>ron</span></p>
@@ -38,7 +30,7 @@
             <a href="#">Portfolio</a>
             <a href="#">FAQ</a>
           </div>
-          <a href="#">
+          <a href="#" class="get-started">
             <button class="btn">Get Started</button>
           </a>
         </div>
