feat(hero): Add trusted brands display with responsive styles and new SVG icons

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
       <div class="star1 star"></div>
       <div class="star2 star"></div>
       <div class="star3 star"></div>
+      <div class="brands">
+        <p>TRUSTED BY AMAZING BRANDS</p>
+        <div class="brands-content flex">
+            <img src="assets/images/icons/hero/brandLayers.svg" alt="Layers fictional company">
+            <img src="assets/images/icons/hero/brandQuotient.svg" alt="Quotient fictional company">
+            <img src="assets/images/icons/hero/brandCircooles.svg" alt="Circooles fictional company">
+            <img src="assets/images/icons/hero/brandHourglass.svg" alt="Hourglass fictional company">
+            <img src="assets/images/icons/hero/brandCommandR.svg" alt="Command-R fictional company">
+      </div>
     </section>
     <script src="assets/js/script.js"></script>
   </body>
