feat(process section): Implement process section with reponsive design

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <p class="logo">Xev<span>ron</span></p>
         <div class="nav-right flex">
           <div class="nav-links">
-            <a href="#">Process</a>
-            <a href="#">Benefits</a>
-            <a href="#">Services</a>
-            <a href="#">Portfolio</a>
-            <a href="#">FAQ</a>
+            <a href="#process">Process</a>
+            <a href="#benefits">Benefits</a>
+            <a href="#services">Services</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#faq">FAQ</a>
           </div>
           <a href="#" class="get-started">
             <button class="btn">Get Started</button>
@@ -55,13 +55,83 @@
       <div class="brands">
         <p>TRUSTED BY AMAZING BRANDS</p>
         <div class="brands-content flex">
-            <img src="assets/images/icons/hero/brandLayers.svg" alt="Layers fictional company">
-            <img src="assets/images/icons/hero/brandQuotient.svg" alt="Quotient fictional company">
-            <img src="assets/images/icons/hero/brandCircooles.svg" alt="Circooles fictional company">
-            <img src="assets/images/icons/hero/brandHourglass.svg" alt="Hourglass fictional company">
-            <img src="assets/images/icons/hero/brandCommandR.svg" alt="Command-R fictional company">
+          <img
+            src="assets/images/icons/hero/brandLayers.svg"
+            alt="Layers fictional company"
+          />
+          <img
+            src="assets/images/icons/hero/brandQuotient.svg"
+            alt="Quotient fictional company"
+          />
+          <img
+            src="assets/images/icons/hero/brandCircooles.svg"
+            alt="Circooles fictional company"
+          />
+          <img
+            src="assets/images/icons/hero/brandHourglass.svg"
+            alt="Hourglass fictional company"
+          />
+          <img
+            src="assets/images/icons/hero/brandCommandR.svg"
+            alt="Command-R fictional company"
+          />
+        </div>
       </div>
     </section>
+    <main>
+      <section class="section flex-column" id="process">
+        <div class="prcoess-content flex-column">
+          <div class="prcoess-intro-container flex">
+            <div class="process-intro1">
+              <p>HOW WE WORK</p>
+              <p>Get a dedicated design team at fraction of the cost.</p>
+            </div>
+            <div class="process-intro2">
+              <p>
+                Grow your brand with high-quality design for a flat monthly fee.
+                Work with senior designers. Subscribe and make as many requests
+                as you need - no limits.
+              </p>
+              <a href="#pricing">
+                <button class="btn">See Pricing</button>
+              </a>
+            </div>
+          </div>
+          <div class="process-icons flex">
+          </div>
+          <div class="process-cards-container flex">
+            <div class="process-card">
+              <figure  class="process-icon" >
+              <img src="assets/images/icons/process/process1.svg" alt=""/>
+            </figure>
+              <h3>Subscribe & get started</h3>
+              <p>
+                Submit as many design tasks as you need without worrying about
+                individual project fees.
+              </p>
+            </div>
+            <div class="process-card">
+              <figure class="process-icon">
+              <img src="assets/images/icons/process/process2.svg" alt="" />
+            </figure>
+              <h3>Polished designs - on time</h3>
+              <p>
+                Our designers get to work to deliver your request. Receive your
+                design within a few days.
+              </p>
+            </div>
+            <div class="process-card">
+              <img src="assets/images/icons/process/process3.svg" alt="" />
+              <h3>Revisions made simple</h3>
+              <p>
+                Custom designs, prompt replies and as many revisions as you
+                need for perfect results.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
