feat(portfolio section): Implment reponsive portfolio sectionAdd portfolio grid and GSAP parallax with ScrollSmoother/ScrollTrigger - Polish hero/brands/process sections; improve responsive spacing and grid

--- a/index.html
+++ b/index.html
@@ -9,129 +9,212 @@
     <title>Xevron</title>
   </head>
   <body>
-    <header class="flex-column">
-      <nav class="flex">
-        <div class="hamburger-menu">
-          <div id="hamburger-btn">
-            <b></b>
-            <b></b>
-            <b></b>
-          </div>
-          <div class="hamburger-content">
-            <!-- nav-links will be moved here on mobile -->
-          </div>
-        </div>
-        <p class="logo">Xev<span>ron</span></p>
-        <div class="nav-right flex">
-          <div class="nav-links">
-            <a href="#process">Process</a>
-            <a href="#benefits">Benefits</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#faq">FAQ</a>
-          </div>
-          <a href="#" class="get-started">
-            <button class="btn">Get Started</button>
-          </a>
-        </div>
-      </nav>
-    </header>
-    <section class="hero flex-column">
-      <p class="hero-title">
-        Bringing Your <br />
-        Dream Into <em>Reality</em>
-      </p>
-      <p class="hero-para">
-        We increase revenue and ensure sustainable long-term growth <br />
-        for your business through powerful Webflow websites.
-      </p>
-      <a href="#">
-        <button class="btn">Book A Meeting</button>
-      </a>
-      <div class="glow"></div>
-      <div class="star1 star"></div>
-      <div class="star2 star"></div>
-      <div class="star3 star"></div>
-      <div class="brands">
-        <p>TRUSTED BY AMAZING BRANDS</p>
-        <div class="brands-content flex">
-          <img
-            src="assets/images/icons/hero/brandLayers.svg"
-            alt="Layers fictional company"
-          />
-          <img
-            src="assets/images/icons/hero/brandQuotient.svg"
-            alt="Quotient fictional company"
-          />
-          <img
-            src="assets/images/icons/hero/brandCircooles.svg"
-            alt="Circooles fictional company"
-          />
-          <img
-            src="assets/images/icons/hero/brandHourglass.svg"
-            alt="Hourglass fictional company"
-          />
-          <img
-            src="assets/images/icons/hero/brandCommandR.svg"
-            alt="Command-R fictional company"
-          />
-        </div>
-      </div>
-    </section>
-    <main>
-      <section class="section flex-column" id="process">
-        <div class="prcoess-content flex-column">
-          <div class="prcoess-intro-container flex">
-            <div class="process-intro1">
-              <p>HOW WE WORK</p>
-              <p>Get a dedicated design team at fraction of the cost.</p>
+    <div id="wrapper">
+      <div id="content">
+        <header class="flex-column">
+          <nav class="flex">
+            <div class="hamburger-menu">
+              <div id="hamburger-btn">
+                <b></b>
+                <b></b>
+                <b></b>
+              </div>
+              <div class="hamburger-content">
+                <!-- nav-links will be moved here on mobile -->
+              </div>
             </div>
-            <div class="process-intro2">
-              <p>
-                Grow your brand with high-quality design for a flat monthly fee.
-                Work with senior designers. Subscribe and make as many requests
-                as you need - no limits.
-              </p>
-              <a href="#pricing">
-                <button class="btn">See Pricing</button>
+            <p class="logo">Xev<span>ron</span></p>
+            <div class="nav-right flex">
+              <div class="nav-links">
+                <a href="#process">Process</a>
+                <a href="#benefits">Benefits</a>
+                <a href="#services">Services</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#faq">FAQ</a>
+              </div>
+              <a href="#" class="get-started">
+                <button class="btn">Get Started</button>
               </a>
             </div>
-          </div>
-          <div class="process-icons flex">
-          </div>
-          <div class="process-cards-container flex">
-            <div class="process-card">
-              <figure  class="process-icon" >
-              <img src="assets/images/icons/process/process1.svg" alt=""/>
-            </figure>
-              <h3>Subscribe & get started</h3>
-              <p>
-                Submit as many design tasks as you need without worrying about
-                individual project fees.
-              </p>
+          </nav>
+        </header>
+        <section class="hero flex-column">
+          <p class="hero-title">
+            Bringing Your <br />
+            Dream Into <em>Reality</em>
+          </p>
+          <p class="hero-para">
+            We increase revenue and ensure sustainable long-term growth <br />
+            for your business through powerful Webflow websites.
+          </p>
+          <a href="#">
+            <button class="btn">Book A Meeting</button>
+          </a>
+          <div class="glow"></div>
+          <div class="star1 star"></div>
+          <div class="star2 star"></div>
+          <div class="star3 star"></div>
+          <div class="brands">
+            <p>TRUSTED BY AMAZING BRANDS</p>
+            <div class="brands-content flex">
+              <img
+                src="assets/images/icons/hero/brandLayers.svg"
+                alt="Layers fictional company"
+              />
+              <img
+                src="assets/images/icons/hero/brandQuotient.svg"
+                alt="Quotient fictional company"
+              />
+              <img
+                src="assets/images/icons/hero/brandCircooles.svg"
+                alt="Circooles fictional company"
+              />
+              <img
+                src="assets/images/icons/hero/brandHourglass.svg"
+                alt="Hourglass fictional company"
+              />
+              <img
+                src="assets/images/icons/hero/brandCommandR.svg"
+                alt="Command-R fictional company"
+              />
             </div>
-            <div class="process-card">
-              <figure class="process-icon">
-              <img src="assets/images/icons/process/process2.svg" alt="" />
-            </figure>
-              <h3>Polished designs - on time</h3>
-              <p>
-                Our designers get to work to deliver your request. Receive your
-                design within a few days.
-              </p>
-            </div>
-            <div class="process-card">
-              <img src="assets/images/icons/process/process3.svg" alt="" />
-              <h3>Revisions made simple</h3>
-              <p>
-                Custom designs, prompt replies and as many revisions as you
-                need for perfect results.
-              </p>
-            </div>
           </div>
-        </div>
-      </section>
-    </main>
-    <script src="assets/js/script.js"></script>
+        </section>
+        <main>
+          <section class="section flex-column" id="process">
+            <div class="prcoess-content flex-column">
+              <div class="prcoess-intro-container flex">
+                <div class="process-intro1">
+                  <p>HOW WE WORK</p>
+                  <p>Get a dedicated design team at fraction of the cost.</p>
+                </div>
+                <div class="process-intro2">
+                  <p>
+                    Grow your brand with high-quality design for a flat monthly
+                    fee. Work with senior designers. Subscribe and make as many
+                    requests as you need - no limits.
+                  </p>
+                  <a href="#pricing">
+                    <button class="btn">See Pricing</button>
+                  </a>
+                </div>
+              </div>
+              <div class="process-icons flex"></div>
+              <div class="process-cards-container flex">
+                <div class="process-card">
+                  <figure class="process-icon">
+                    <img
+                      src="assets/images/icons/process/process1.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <h3>Subscribe & get started</h3>
+                  <p>
+                    Submit as many design tasks as you need without worrying
+                    about individual project fees.
+                  </p>
+                </div>
+                <div class="process-card">
+                  <figure class="process-icon">
+                    <img
+                      src="assets/images/icons/process/process2.svg"
+                      alt=""
+                    />
+                  </figure>
+                  <h3>Polished designs - on time</h3>
+                  <p>
+                    Our designers get to work to deliver your request. Receive
+                    your design within a few days.
+                  </p>
+                </div>
+                <div class="process-card">
+                  <img src="assets/images/icons/process/process3.svg" alt="" />
+                  <h3>Revisions made simple</h3>
+                  <p>
+                    Custom designs, prompt replies and as many revisions as you
+                    need for perfect results.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section id="portfolio">
+            <div class="portfolio-title">
+            <h1>Our Beautiful Works</h1>
+            <p>We help our clients grow their bottom-line with clear and professional websites.</p>
+          </div>
+            <section class="images">
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/EDO_square_02.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/dfat-poster.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/key-insights.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/oxfam-appeal-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.9"
+                src="assets/images/portfolio/cvgt-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.9"
+                src="assets/images/portfolio/dropbottle-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.9"
+                src="assets/images/portfolio/map-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed=".9"
+                src="assets/images/portfolio/unwrapped-animated-thumbnail-poster.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/RWH_square_04.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/Ader-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/welcome-home-project-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/bluegreen-square.jpg.jpg"
+                alt=""
+              />
+            </section>
+          </section>
+          <section class="section" id="services">
+            <!-- Content here -->
+          </section>
+        </main>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
+        <script src="assets/js/script.js"></script>
+      </div>
+    </div>
   </body>
 </html>
