feat(services-section): Implment reponsive services section and enhance prcoess section styling - Added margin-bottom to prcoess section for better visuals - Removed padding top of prcoess section content for better visuals - Increased padding bottom & added gap 1rem to process section content to give the content more room - Chnaged padding of intro-container to give for better visual appearance - Added gap 1rem to services section for better visual appearance

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         <main>
           <section class="section flex-column" id="process">
             <div class="prcoess-content flex-column">
-              <div class="prcoess-intro-container flex">
-                <div class="process-intro1">
+              <div class="intro-container flex">
+                <div class="intro1">
                   <p>HOW WE WORK</p>
                   <p>Get a dedicated design team at fraction of the cost.</p>
                 </div>
-                <div class="process-intro2">
+                <div class="intro2">
                   <p>
                     Grow your brand with high-quality design for a flat monthly
                     fee. Work with senior designers. Subscribe and make as many
@@ -139,10 +139,13 @@
             </div>
           </section>
           <section id="portfolio">
-            <div class="portfolio-title">
-            <h1>Our Beautiful Works</h1>
-            <p>We help our clients grow their bottom-line with clear and professional websites.</p>
-          </div>
+            <div class="title">
+              <h1>Our Beautiful Works</h1>
+              <p>
+                We help our clients grow their bottom-line with clear and
+                professional websites.
+              </p>
+            </div>
             <section class="images">
               <img
                 data-speed="0.8"
@@ -206,8 +209,94 @@
               />
             </section>
           </section>
-          <section class="section" id="services">
-            <!-- Content here -->
+          <section class="section flex-column" id="services">
+            <div class="title">
+              <p>OUR CAPABILITIES</p>
+              <h1>We can help you with...</h1>
+              <p></p>
+            </div>
+            <div class="service-names flex">
+              <p class="btn">Web Design & UI</p>
+              <p class="btn">Social media visuals</p>
+              <p class="btn">Infographics</p>
+              <p class="btn">Design system</p>
+              <p class="btn">Email design</p>
+              <p class="btn">Stationery</p>
+              <p class="btn">Icons</p>
+              <p class="btn">Packaging & merch</p>
+              <p class="btn">Signage</p>
+              <p class="btn">Brochures</p>
+              <p class="btn">Logos & branding</p>
+              <p class="btn">Digital ads</p>
+              <p class="btn">Wireframes</p>
+            </div>
+            <div class="intro-container flex">
+              <div class="intro1">
+                <p>BENEFITS</p>
+                <p>
+                  The design subscription that connects you to your dream team.
+                </p>
+              </div>
+              <div class="intro2">
+                <p>
+                  A subscription can alleviate the stress of staffing, managing
+                  expenses, or make design calls like a Creative Director. We
+                  partner with you to ensure that your design elevates your
+                  brand to new levels.
+                </p>
+                <a href="#pricing">
+                  <button class="btn">See Pricing</button>
+                </a>
+              </div>
+            </div>
+            <div class="services-grid">
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/infinity.svg" alt="">
+                <h3>1. On-demand requests</h3>
+                <p>Put all your requests in the design queue in Trello, and we'll quickly knock them out 1 by 1, every time.</p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/flash.svg" alt="">
+                <h3>2. Top-notch quality</h3>
+                <p>High-end work from a dedicated team of senior designers that's always available when you need it.</p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/w.svg" alt="">
+                <h3>3. Powered by - Webflow</h3>
+                <p>We build every site on Webflow, making them dynamic, accessible, and easily scalable..
+                </p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/paint.svg" alt="">
+                <h3>4. Fast & Responsive</h3>
+                <p>Get regular updates on your projects and can expect to receive your designs within 2-3 days.</p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/calendar.svg" alt="">
+                <h3>5. No Lock in contracts</h3>
+                <p>Pay the same every month, no surprises. You can use it for as long as you want and cancel anytime.</p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/value.svg" alt="">
+                <h3>6. Great value for money</h3>
+                <p>Get the power of dedicated design team at fraction of the cost of full-time employee.($54k/yr vs. $112k/yr).</p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/setting.svg" alt="">
+                <h3>7. Customized for you</h3>
+                <p>We design and build custom for you. We're never starting from a template unless you want that?</p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/money.svg" alt="">
+                <h3>8. Creative paying</h3>
+                <p>We're always here when you need us and never on payroll when you don't — flexible, dependable, & dedicated.</p>
+              </div>
+              <div class="services-grid-item">
+                <img src="assets/images/icons/services/breifcase.svg" alt="">
+                <h3>9. Expert turnovers</h3>
+                <p>You're getting over 10+ years of top-tier design experience with every request — no hand-holding required.</p>
+              </div>
+            </div>
           </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
