feat(site):  Reordered sections -  Swapped portfolio & services section places in DOM - Replaced "Benefits" link with "Pricing" in the navigation - Reordered nav links to match new site structure - Added smooth scrolling behavior to the body for improved user experience

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class="nav-right flex">
               <div class="nav-links">
                 <a href="#process">Process</a>
-                <a href="#benefits">Benefits</a>
                 <a href="#services">Services</a>
                 <a href="#portfolio">Portfolio</a>
+                <a href="#benefits">Pricing</a>
                 <a href="#faq">FAQ</a>
               </div>
               <a href="#" class="get-started">
@@ -138,82 +138,10 @@
               </div>
             </div>
           </section>
-          <section id="portfolio">
-            <div class="title">
-              <h1>Our Beautiful Works</h1>
-              <p>
-                We help our clients grow their bottom-line with clear and
-                professional websites.
-              </p>
-            </div>
-            <section class="images">
-              <img
-                data-speed="0.8"
-                src="assets/images/portfolio/EDO_square_02.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.8"
-                src="assets/images/portfolio/dfat-poster.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.8"
-                src="assets/images/portfolio/key-insights.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.8"
-                src="assets/images/portfolio/oxfam-appeal-square.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.9"
-                src="assets/images/portfolio/cvgt-square.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.9"
-                src="assets/images/portfolio/dropbottle-square.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.9"
-                src="assets/images/portfolio/map-square.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed=".9"
-                src="assets/images/portfolio/unwrapped-animated-thumbnail-poster.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.8"
-                src="assets/images/portfolio/RWH_square_04.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.8"
-                src="assets/images/portfolio/Ader-square.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.8"
-                src="assets/images/portfolio/welcome-home-project-square.jpg.jpg"
-                alt=""
-              />
-              <img
-                data-speed="0.8"
-                src="assets/images/portfolio/bluegreen-square.jpg.jpg"
-                alt=""
-              />
-            </section>
-          </section>
           <section class="section flex-column" id="services">
             <div class="title">
               <p>OUR CAPABILITIES</p>
               <h1>We can help you with...</h1>
-              <p></p>
             </div>
             <div class="service-names flex">
               <p class="btn">Web Design & UI</p>
@@ -297,6 +225,77 @@
                 <p>You're getting over 10+ years of top-tier design experience with every request — no hand-holding required.</p>
               </div>
             </div>
+          </section>
+          <section id="portfolio">
+            <div class="title">
+              <h1>Our Beautiful Works</h1>
+              <p>
+                We help our clients grow their bottom-line with clear and
+                professional websites.
+              </p>
+            </div>
+            <section class="images">
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/EDO_square_02.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/dfat-poster.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/key-insights.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/oxfam-appeal-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.9"
+                src="assets/images/portfolio/cvgt-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.9"
+                src="assets/images/portfolio/dropbottle-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.9"
+                src="assets/images/portfolio/map-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed=".9"
+                src="assets/images/portfolio/unwrapped-animated-thumbnail-poster.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/RWH_square_04.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/Ader-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/welcome-home-project-square.jpg.jpg"
+                alt=""
+              />
+              <img
+                data-speed="0.8"
+                src="assets/images/portfolio/bluegreen-square.jpg.jpg"
+                alt=""
+              />
+            </section>
           </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
